[gd_scene load_steps=14 format=2]

[ext_resource path="res://textures/entities/bullet.png" type="Texture" id=1]
[ext_resource path="res://textures/entities/smoke.png" type="Texture" id=2]
[ext_resource path="res://entities/weapons/scripts/BaseBullet.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=17]
height = 76.0

[sub_resource type="Curve" id=2]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.271318, 185.727 ), 0.0, 0.0, 0, 0, Vector2( 1, 41.7273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0754717, 0.877358, 0.95283 )
colors = PoolColorArray( 0.98291, 0.930117, 0, 1, 0.17041, 0.160425, 0.160425, 1, 0, 0, 0, 0.690196, 0.901961, 0.901961, 0.901961, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="Curve" id=8]
max_value = 2.0
_data = [ Vector2( 0, 0.85 ), 0.0, 0.0, 0, 0, Vector2( 1, 2 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 50, 50, 0 )
angular_velocity_curve = SubResource( 3 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 37.26
scale_curve = SubResource( 9 )
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=11]
resource_name = "explode"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Explode:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:sleeping")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CanvasItemMaterial" id=18]
blend_mode = 1

[node name="BaseBullet" type="RigidBody2D"]
contacts_reported = 2
contact_monitor = true
sleeping = true
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 109, -1 )
rotation = 1.5708
shape = SubResource( 17 )

[node name="Explode" type="Particles2D" parent="."]
position = Vector2( 8, 1 )
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.788235 )
material = SubResource( 18 )
position = Vector2( 81, 0 )
scale = Vector2( 0.300781, 0.222656 )
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )

[node name="Light2D" type="Light2D" parent="Sprite"]
position = Vector2( 59.1699, 0 )
scale = Vector2( 0.595868, 0.414071 )
texture = ExtResource( 1 )
offset = Vector2( 10, 0 )
texture_scale = 2.45
color = Color( 1, 0, 0, 1 )
energy = 9.5

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
